--- a/Cap11/.vscode/launch.json
+++ b/Cap11/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-    // Use o IntelliSense para saber mais sobre os atributos possíveis.
-    // Focalizar para exibir as descrições dos atributos existentes.
-    // Para obter mais informações, acesse: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -10,6 +7,12 @@
             "name": "Iniciar o Chrome em relação a localhost",
             "url": "http://localhost:5500",
             "webRoot": "${workspaceFolder}"
+        },
+        {
+            "type": "node-terminal",
+            "name": "Terminal de Depuração de JavaScript",
+            "request": "launch",
+            "cwd": "${workspaceFolder}"
         }
     ]
 }
