inicio da criação do APP.JS

--- a/Cap12/package.json
+++ b/Cap12/package.json
@@ -1,15 +1,18 @@
 {
   "name": "cap12",
   "version": "1.0.0",
-  "description": "Nesse capítulo, utilizaremos mais pacotes do NODE JS e para funcionar precisa instalar os pacotes antes. Os comandos devem ser dados DENTRO da pasta do programa no CMD:",
+  "description": "Exercicios do CAP 12 do livro - Exemplo de Aplicação Back-end",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "TCM",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
