--- a/Cap12/package.json
+++ b/Cap12/package.json
@@ -10,7 +10,8 @@
   "author": "TCM",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "knex": "^2.5.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
