--- a/Cap12/package.json
+++ b/Cap12/package.json
@@ -10,6 +10,7 @@
   "author": "TCM",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^2.5.1",
     "sqlite3": "^5.1.6"
